<resources>
    <string name="app_name">daijia</string>

    <string name="go">去</string>
    <string name="navigation">导航</string>
    <string name="order_number">订单编号</string>
    <string name="accept_order">接单</string>
    <string name="refuse_order">拒单</string>
    <string name="to_start">前往预约地</string>
    <string name="change_end">修改终点</string>
    <string name="order_create_type">下单方式</string>
    <string name="order_dj_company">所属公司</string>

    <string name="start_drive">点击出发</string>
    <string name="start_wait">等待</string>

    <string name="huadongdaoda">滑动到达预约地</string>


    <string name="click_wait">点击等待</string>
    <string name="click_start">点击出发</string>
    <string name="settle">结算</string>
    <string name="service_fee">服务费用</string>
    <string name="drive_distance">行驶里程</string>
    <string name="drive_time">行驶时间</string>
    <string name="wait_time">等待时间</string>
    <string name="minutes">分钟</string>

    <string name="wait_fee">等待费用</string>

    <string name="km">公里</string>

    <string name="current_mileage">当前公里数：</string>
    <string name="current_fee">当前费用：</string>
    <string name="change_confirm">确定</string>
    <string name="cancel">取消</string>

    <string name="confirm_money">确认费用</string>
    <string name="consumer_prepay">客户预付</string>
    <string name="more_pay">还需支付</string>
    <string name="dai_fu">代付</string>

    <string name="watch_detail">查看费用详情 ></string>
    <string name="extra_fee">附加服务费</string>
    <string name="help_pay_fee">垫付费用</string>
    <string name="hint_edit">点击价格文字可以直接输入</string>
    <string name="please_remark">请输入备注信息</string>

    <string name="minest_fee">最低消费金额</string>
    <string name="xianjin_coupon">元现金优惠券</string>
    <string name="zhekou_coupon">折折扣优惠券</string>

    <string name="fee_detail">费用详情</string>

    <string name="please_consumer_phone">请输入客户电话号码</string>
    <string name="please_consumer_name">请输入客户姓名</string>
    <string name="create_order">创建订单</string>

    <string name="cancel_suc">取消订单成功</string>
    <string name="refuse_suc">拒单成功</string>

    <string name="illegality_place">无效的目的地,无法导航</string>

    <string name="cancel_reason">请选择消单原因</string>
    <string name="cancel_reason_1">与客户协商一致取消订单</string>
    <string name="cancel_reason_2">客户呼叫多人，只用先到司机</string>
    <string name="cancel_reason_3">客户拒接电话</string>
    <string name="cancel_reason_4">客户单方面取消</string>
    <string name="cancel_reason_5">其他原因</string>

    <string name="cancel_cancel">暂不取消</string>
    <string name="cancel_order">取消订单</string>

    <string name="order_not_exist">订单不存在</string>

    <string name="where_start">请选择出发地</string>
    <string name="where_end">请选择目的地</string>

    <string name="yuan_qi">元起</string>
    <string name="yuan">元</string>
    <string name="about">约</string>
    <string name="create_suc">创建订单成功</string>

    <string name="no_type">未选择代驾类型,无法继续</string>
    <string name="no_passenger">未查询到客户信息,无法继续</string>
    <string name="no_start">未选择起点,无法继续</string>
    <string name="no_budget">预估价格失败,无法继续</string>
    <string name="leagel_phone">请输入合法的手机号码</string>

    <string name="please_start">请选择预约地</string>
    <string name="please_end">请选择目的地</string>

    <string name="contract_service">联系客服</string>
    <string name="same_order_driver">同单司机</string>
    <string name="consumer_msg">客户信息</string>
    <string name="order_transfer">转单</string>

    <string name="refuse_reason">请输入拒单理由</string>
    <string name="ok">确定</string>

    <string name="qb_fee">起步费用</string>
    <string name="lc_fee">里程费用</string>
    <string name="time_fee">时间费用</string>
    <string name="dh_fee">等候费用</string>
    <string name="coupon_text">优惠券</string>
    <string name="prepay_text">预付金额</string>
    <string name="no_coupon">暂无优惠券</string>

    <string name="route_failed">路径规划失败</string>

    <string name="loc_failed">定位失败,无法继续操作</string>

    <string name="status_pai">已派单</string>
    <string name="status_jie">已接单</string>
    <string name="status_to_start">前往预约地</string>
    <string name="status_arrive_start">已到达预约地</string>
    <string name="status_wait">等待中</string>
    <string name="status_to_end">前往目的地</string>
    <string name="status_cheating">作弊器</string>
    <string name="status_confirm">确认费用</string>

    <string name="canceled_order">当前订单已被取消:)</string>
    <string name="backed_order">当前订单已被收回:)</string>

    <string name="please_cancel_reason">请输入取消理由</string>

    <string name="pay_suc">结算完成</string>

    <string name="k_k_meter">公里</string>
    <string name="yuan_coupon">元优惠券</string>

    <string name="cus_pay">客户在线支付</string>
    <string name="help_pay">收取现金</string>
    <string name="cus_balance">余额支付</string>
    <string name="qiandan">签单支付</string>

    <string name="pay_title">选择支付类型</string>
    <string name="please_pay_title">请选择支付类型</string>

    <string name="fee_hint">注:垫付费用不参与优惠券计算</string>

    <string name="quan_lan">全览</string>

    <string name="jishi">即时</string>
    <string name="appoint">预约</string>


    <string name="taxi_meter">计价器</string>
    <string name="back">返回</string>
    <string name="waited">已等候</string>
    <string name="lc_km">里程(公里)</string>
    <string name="total_fee_yuan">总金额(元)</string>


    <string name="yi_xingshi">已行驶</string>
    <string name="you_waited">您已经等待</string>
    <string name="kuohao_minutes">(分钟)</string>


    <string name="middle_start_drive">出发</string>


    <string name="choice_pay_type">选择支付方式</string>

    <string name="order_accepted">已接单</string>
    <string name="order_running">执行中</string>
    <string name="order_waiting">等待中</string>


    <string name="consumer_name">客户姓名</string>
    <string name="consumer_type">客户类型</string>
    <string name="order_company">订单所属公司</string>
    <string name="consumer_company">客户所属公司</string>
    <string name="consumer_balance">余额</string>
    <string name="can_sign">签单</string>

    <string name="can_sign_consumer">签单客户</string>

    <string name="allow">允许</string>
    <string name="not_allow">不允许</string>


    <string name="please_refuse_reason">请选择拒单原因</string>

    <string name="click_wrong">点错了</string>
    <string name="too_far_way">距离太远</string>
    <string name="body_wrong">身体不适</string>
    <string name="car_wrong">车坏了</string>
    <string name="please_other_reason">请输入其他原因</string>
    <string name="refuse_apply">提交</string>

    <string name="not_non_refuse">拒单理由不能为空</string>


    <string name="personal_consumer">个人客户</string>
    <string name="qiye_consumer">企业客户</string>

    <string name="left">剩余</string>
    <string name="meter">米</string>
    <string name="about_">大约</string>
    <string name="hour_">时</string>
    <string name="minute_">分钟</string>

    <string name="pay_money">支付</string>

    <string name="finished_order">该订单已完成支付</string>

    <string name="user_phone">使用人</string>
    <string name="passenger_phone">下单人</string>
    <string name="the_same_order">联系队长</string>
    <string name="mqtt_init_ing">计价服务初始化中，请稍后</string>

</resources>
