<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/corners_white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableLeft="@mipmap/ic_hint"
                android:drawablePadding="2dp"
                android:text="@string/hint"
                android:textColor="@color/text_color_black"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/ic_close"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="10dp"
                android:src="@mipmap/ic_close_gray" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:background="@color/line_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:text="@string/please_refuse_reason" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/reason_1"
                android:layout_width="0.0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/text_check_selector"
                android:button="@null"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/click_wrong"
                android:textColor="@color/text_check_color"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/reason_2"
                android:layout_width="0.0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/text_check_selector"
                android:button="@null"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/too_far_way"
                android:textColor="@color/text_check_color"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/reason_3"
                android:layout_width="0.0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/text_check_selector"
                android:button="@null"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/body_wrong"
                android:textColor="@color/text_check_color"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/reason_4"
                android:layout_width="0.0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/text_check_selector"
                android:button="@null"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="@string/car_wrong"
                android:textColor="@color/text_check_color"
                android:textSize="14sp" />

        </LinearLayout>

        <EditText
            android:id="@+id/edit_reason"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/corners_f5f5f5"
            android:gravity="center_vertical"
            android:hint="@string/please_other_reason"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textSize="16sp" />

        <Button
            android:id="@+id/refuse_apply"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/corners_accent"
            android:text="@string/refuse_apply"
            android:textColor="@color/white" />
    </LinearLayout>
</FrameLayout>