<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/control_con"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start_wait"
            android:layout_width="0.0dp"
            android:layout_height="50dp"
            android:layout_weight="8"
            android:background="@drawable/corners_button_bg"
            android:text="@string/click_wait"
            android:textColor="@color/white" />

        <LinearLayout
            android:id="@+id/settle"
            android:layout_width="0.0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="2"
            android:background="@drawable/corners_404456"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/money_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:text="@string/settle"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corners_white"
        android:layout_above="@+id/control_con"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0.0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service_fee"
                    android:textSize="16sp"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/money_sign"
                        android:textSize="16sp"
                        android:textColor="@color/yellow"
                        />

                    <TextView
                        android:id="@+id/service_money"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="120"
                        android:textSize="25sp"
                        android:textColor="@color/yellow"
                        />

                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="0.0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/drive_distance"
                    android:textSize="16sp"
                    />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp">

                    <TextView
                        android:id="@+id/distance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="6.8"
                        android:textSize="25sp"
                        android:textColor="@color/yellow"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/km"
                        android:textSize="16sp"
                        />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:background="#f7f7f7"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            >

            <LinearLayout
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drive_time"/>
            <TextView
                android:id="@+id/drive_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20"
                android:textSize="20sp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:textColor="#232323"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/minutes"/>
        </LinearLayout>

            <LinearLayout
                android:layout_width="0.0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wait_time"/>
                <TextView
                    android:id="@+id/wait_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20"
                    android:textSize="20sp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:textColor="#232323"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minutes"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>