<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/meter_background">

    <ImageView
        android:onClick="toNavi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/navi_icon_old"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_toRightOf="@+id/center"
        android:gravity="center_horizontal"
        android:minWidth="180dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:text="@string/total_fee_yuan"
            android:textColor="#aaffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/total_fee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="0.0"
            android:textColor="#ffc600"
            android:textSize="65sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/aaaa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="25dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.easymi.component.widget.LoadingButton
            android:id="@+id/meter_wait_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_height"
            android:gravity="center"
            android:background="@drawable/corners_accent"
            android:minWidth="180dp"
            android:text="已等候0分钟"
            android:textColor="#fff"
            android:textSize="20sp" />

        <com.easymi.component.widget.LoadingButton
            android:id="@+id/meter_settle_btn"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/btn_height"
            android:gravity="center"
            android:layout_marginLeft="40dp"
            android:background="@drawable/corners_accent"
            android:minWidth="180dp"
            android:text="@string/settle"
            android:textColor="#fff"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginRight="20dp"
        android:layout_toLeftOf="@+id/center"
        android:gravity="center_horizontal"
        android:minWidth="180dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/lc_km"
            android:textColor="#aaffffff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="0.0"
            android:textColor="#ffc600"
            android:textSize="65sp"
            android:textStyle="bold" />
    </LinearLayout>


    <ImageView
        android:id="@+id/center"
        android:layout_width="0.1dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="40dp"
        android:background="@color/line_color" />


    <LinearLayout
        android:id="@+id/back"
        android:padding="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/meter_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/taxi_meter"
        android:textColor="#fff"
        android:textSize="25sp" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yi_xingshi"
            android:textColor="#aaffffff"
            android:textSize="16sp" />

        <View
            android:layout_width="0.1dp"
            android:layout_height="15dp"
            android:background="@color/line_color"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/running_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="#ffc600"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:text="@string/minutes"
            android:textColor="#aaffffff"
            android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>